--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <header>
       <div>
         <h1>Derecho Administrativo · Tests</h1>
-        <p>Índice simple y robusto: botón → abre el test del tema. Sin JSON, sin fetch, sin líos.</p>
+        <p>Índice de temas, by M.García.</p>
       </div>
       <div class="top">
         <a class="btn primary" id="continueBtn" href="#" style="display:none">Continuar</a>
