--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <section class="grid" id="grid"></section>
 
     <footer>
-      GitHub Pages · Todo en raíz (index.html + TemaX.html) · Esto no depende de nada externo.
+         by M.García
     </footer>
   </div>
 
@@ -299,8 +299,8 @@
             <div class="badge">T${t.id}</div>
           </div>
           <div class="actions">
-            <a class="btn primary" href="${escapeHTML(t.file)}" data-open="${escapeHTML(t.file)}">Abrir test</a>
-            <a class="btn" href="${escapeHTML(t.file)}#inicio" data-open="${escapeHTML(t.file)}">Empezar</a>
+            <a class="btn primary" href="${escapeHTML(t.file)}" data-open="${escapeHTML(t.file)}">Abrir Tema</a>
+  
           </div>
         </article>
       `;
