--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Derecho Administrativo · Tests</title>
+  <title>Derecho Administrativo · herramienta de estudio</title>
   <meta name="description" content="Índice simple para abrir los tests por tema." />
 
   <style>
@@ -227,7 +227,7 @@
     <div class="bar">
       <div class="search">
         <span style="opacity:.7">🔎</span>
-        <input id="q" type="search" placeholder="Buscar por número o título… (ej: 1, bases, privado)" autocomplete="off" />
+        <input id="q" type="search" placeholder="Buscar (ej: 1, tema1,...)" autocomplete="off" />
       </div>
       <div class="pill" id="count">0 temas</div>
     </div>
@@ -245,7 +245,7 @@
     // =========================
     const TEMAS = [
       { id: 1, titulo: "Concepto del Derecho Administrativo", file: "Tema1.html" },
-      { id: 2, titulo: "Bases del Derecho Administrativo",     file: "Tema2.html" },
+      { id: 2, titulo: "Las fuentes legales y supralegales del Derecho administrativo",     file: "Tema2.html" },
 
       // Cuando hagas más, añade líneas:
       // { id: 3, titulo: "…", file: "Tema3.html" },
