--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
     const TEMAS = [
       { id: 1, titulo: "EL DERECHO ADMINISTRATIVO", file: "Tema1.html" },
       { id: 2, titulo: "LAS FUENTES LEGALES Y SUPRALEGALES DEL DERECHO ADMINISTRATIVO", file: "Tema2.html" },
+     { id: 3, titulo: "TEORÍA GENERAL DEL REGLAMENTO", file: "Tema3.html"
       // { id: 3, titulo: "…", file: "Tema3.html" },
     ];
 
